# cg3lib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md  cg3.cmake  cg3.pri  doxygen_config  install.sh  install_macos.sh  install_ubuntu.sh
cg3/: CMakeLists.txt  algorithms.cmake  algorithms.pri  cg3lib.h  cgal.cmake  cgal.pri  cinolib.cmake  cinolib.pri  core.cmake  core.pri  data_structures.cmake  data_structures.pri  deprecated.pri  development.pri  examples.pri  find_boost.pri  find_eigen.pri  libigl.cmake  libigl.pri  meshes.cmake  meshes.pri  post.cmake  vcglib.cmake  vcglib.pri  viewer.cmake  viewer.pri  voro++.cmake  voro++.pri
cg3/algorithms/: convex_hull2.cpp  convex_hull2.h  convex_hull2_incremental.h  convex_hull2_incremental.tpp  convex_hull3.cpp  convex_hull3.h  convexhull.cpp  convexhull.h  convexhull.tpp  convexhull2d.h  convexhull2d.tpp  convexhull2d_iterative.h  convexhull2d_iterative.tpp  gaussian_weighted_smoothing.cpp  gaussian_weighted_smoothing.h  global_optimal_rotation_matrix.cpp  global_optimal_rotation_matrix.h  graph_algorithms.h  graph_algorithms.inl  graph_algorithms.tpp  laplacian_smoothing.cpp  laplacian_smoothing.h  marching_cubes.cpp  marching_cubes.h  mesh_function_smoothing.cpp  mesh_function_smoothing.h  mesh_function_smoothing.inl  normalization.cpp  normalization.h  saliency.cpp  saliency.h  sphere_coverage.h  sphere_coverage.inl  sphere_coverage.tpp
cg3/cgal/: aabb_tree.cpp  aabb_tree3.cpp  aabb_tree3.h  aabbtree.cpp  aabbtree.h  booleans2.cpp  booleans2.h  booleans2d.cpp  booleans2d.h  cgal.h  cgal_aabbtree.cpp  cgal_aabbtree.h  cgal_booleans2d.cpp  cgal_convexhull.cpp  cgal_convexhull.h  cgal_convexhull.tpp  cgal_holefilling.cpp  cgal_holefilling.h  cgal_intersections.cpp  cgal_intersections.h  cgal_minimumbbox.cpp  cgal_minimumbbox.h  cgal_polyhedron.cpp  cgal_polyhedron.h  cgal_sdf.cpp  cgal_sdf.h  cgal_signeddistances.cpp  cgal_signeddistances.h  cgal_slicer.cpp  cgal_slicer.h  cgal_surfacemesh.cpp  cgal_surfacemesh.h  cgal_triangulation.cpp  cgal_triangulation.h  cgalboolean.cpp  cgalboolean.h  cgalholefilling.cpp  cgalholefilling.h  cgalinterface.h  cgalsdf.cpp  (+50 more)
cg3/cinolib/: cinolib_mesh_conversions.cpp  cinolib_mesh_conversions.h  mesh_conversions.cpp  mesh_conversions.h
cg3/core/: find_boost.pri  find_eigen.pri
cg3/data_structures/: voronoi_cell.cpp  voronoi_cell.h
cg3/examples/: tutorials.h
cg3/geometry/: bounding_box.h  bounding_box.tpp  bounding_box2.cpp  bounding_box2.h  bounding_box2.tpp  bounding_box3.cpp  bounding_box3.h  bounding_box3.tpp  cylinder.cpp  cylinder.h  intersections2.cpp  intersections2.h  line.cpp  line.h  line2.cpp  line2.h  line3.cpp  line3.h  plane.cpp  plane.h  point.h  point.tpp  point2.h  point2.inl  point3.h  point3.inl  point3.tpp  polygon2.cpp  polygon2.h  quaternion.cpp  quaternion.h  segment.h  segment2.h  segment3.h  sphere.cpp  sphere.h  transformations.cpp  transformations.h  transformations3.cpp  transformations3.h  (+13 more)
cg3/io/: file_commons.h  load_save.h  load_save_file.h  load_save_file.tpp  load_save_obj.cpp  load_save_obj.h  load_save_obj.inl  load_save_obj.tpp  load_save_ply.cpp  load_save_ply.h  load_save_ply.inl  load_save_ply.tpp  ply_header.cpp  ply_header.h  serialize.h  serialize_eigen.h  serialize_eigen.inl  serialize_eigen.tpp  serialize_qt.h  serialize_qt.tpp  serialize_std.h
cg3/libigl/: booleans.cpp  booleans.h  booleans.ipp  booleans.tpp  connected_components.cpp  connected_components.h  connected_components.tpp  curvature.cpp  curvature.h  decimate.cpp  decimate.h  decimate.tpp  extract_manifold_patches.cpp  extract_manifold_patches.h  extract_manifold_patches.ipp  extract_manifold_patches.tpp  face_adjacences.cpp  face_adjacences.h  face_adjacences.ipp  face_adjacences.tpp  geodesics.cpp  geodesics.h  is_edge_manifold.cpp  is_edge_manifold.h  is_edge_manifold.ipp  is_edge_manifold.tpp  is_vertex_manifold.cpp  is_vertex_manifold.h  is_vertex_manifold.tpp  libigl.h  mesh_adjacencies.cpp  mesh_adjacencies.h  mesh_adjacencies.tpp  mesh_distance.cpp  mesh_distance.h  mesh_distance.tpp  remove_duplicate_vertices.cpp  remove_duplicate_vertices.h  remove_duplicate_vertices.ipp  remove_duplicate_vertices.tpp  (+7 more)
cg3/meshes/: dcel.pri  eigenmesh.pri  mesh.h
cg3/utilities/: color.cpp  color.h  command_line_argument_manager.cpp  command_line_argument_manager.h  command_line_argument_manager.inl  comparators.h  const.h  eigen.h  eigen.inl  hash.h  map.cpp  map.h  nested_initializer_lists.h  nested_initializer_lists.tpp  pair.h  set.cpp  set.h  set.inl  string.h  string.inl  system.h  timer.h  timer.tpp  tokenizer.h  tokenizer.inl  tokenizer.tpp  utils.cpp  utils.h  utils.tpp  vector.h  vector.tpp
cg3/vcglib/: convert.h  convert.inl  convert.tpp  curve_on_manifold.cpp  curve_on_manifold.h  curve_on_manifold.inl  curve_on_manifold.tpp  smoothing.cpp  smoothing.h  smoothing.inl  smoothing.tpp
cg3/viewer/: glcanvas.cpp  glcanvas.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  offlineviewer.cpp  offlineviewer.h  viewer.h
cg3/voro++/: voronoi_cell3.cpp  voronoi_cell3.h  voronoi_diagram3.cpp  voronoi_diagram3.h
examples/: CMakeLists.txt  examples.pro  tutorials.h
examples/aabb_tree/: CMakeLists.txt  aabb_functions.cpp  aabb_functions.h  aabb_tree.pro  main.cpp
examples/adding_manager/: CMakeLists.txt  adding_manager.h  adding_manager.pro  example_manager.cpp  example_manager.h  example_manager.ui  main.cpp
examples/array/: CMakeLists.txt  array.pro  main.cpp
examples/bipartite_graph/: CMakeLists.txt  bipartite_graph.pro  main.cpp
examples/bst_tree/: CMakeLists.txt  bst_functions.cpp  bst_functions.h  bst_tree.pro  bstsample.cpp  bstsample.h  main.cpp
examples/convex_hull_2d/: CMakeLists.txt  ch2dsample.cpp  ch2dsample.h  convex_hull_2d.pro  main.cpp
examples/convex_hull_3d/: CMakeLists.txt  convex_hull_3d.pro  main.cpp
examples/dcel_manipulation/: CMakeLists.txt  dcel_manipulation.pro  main.cpp
examples/graph/: CMakeLists.txt  graph.pro  graph_examples.cpp  graph_examples.h  main.cpp
examples/laplacian_smoothing/: CMakeLists.txt  (+2 more)
(+656 files in other folders)
