#
# This file is part of cg3lib: https://github.com/cg3hci/cg3lib
# This Source Code Form is subject to the terms of the GNU GPL 3.0
#
# @author Alessandro Muntoni (muntoni.alessandro@gmail.com)
# @author Stefano Nuvoli (stefano.nuvoli@gmail.com)
#

cmake_minimum_required(VERSION 3.9)
project(cg3lib-examples)

add_subdirectory(aabb_tree)
add_subdirectory(adding_manager)
add_subdirectory(array)
add_subdirectory(bipartite_graph)
add_subdirectory(bst_tree)
add_subdirectory(convex_hull_2d)
add_subdirectory(convex_hull_3d)
add_subdirectory(dcel_manipulation)
add_subdirectory(graph)
add_subdirectory(laplacian_smoothing)
add_subdirectory(libigl_booleans)
add_subdirectory(mesh_picking)
add_subdirectory(range_tree)
add_subdirectory(viewer)
